--- a/processors/Dockerfile_visualAnalyzer
+++ b/processors/Dockerfile_visualAnalyzer
@@ -26,7 +26,7 @@ RUN curl -SLO "https://nodejs.org/dist/v$NODE_VERSION/node-v$NODE_VERSION-linux-
 
 RUN mkdir /logs
 
-ADD visualAnalysis /blackbox/client
+ADD visualAnalyzer /blackbox/client
 ADD server /blackbox/server
 
 RUN cd /blackbox/server; npm install
